_css/style.css
* {
margin:0;
padding:0;
}
	
body {
	padding-top:0px;
	margin-top:0px;
	font-size: 12pt;
	color:#000000;
	font-family:"Trebuchet MS",Trebuchet,Calibri,Tahoma,Arial,sans-serif;
	text-decoration: none;
	text-align:center;
	background:#fff;
}

/*CMS Layout Styles*/
.cms_top {
	height:28px;
	background:#333333;
	border-bottom:2px solid #777777;
	padding-top:2px;
	position:fixed;
	top:0;
	left:0;
	right:0;
	clear: both;
	z-index:1;
}
	.cms_topSpacer {
		width: 100%;
		height:30px;
	}
	.cms_title {
		color:#ffffff;
		float:left;
		margin-left:10px;
		text-shadow: 2px 2px 2px #999;
		font-size:14pt;
	}
	.cms_title a {
		color:#ffffff;
		text-decoration:none;
	}	
	.cms_topItems {
		float:right;
		width:300px;
		margin-left:10px;
		text-align:right;
		color:#fff;
		padding-right:10px;
	}
		.cms_topItems a:link,
		.cms_topItems a:visited {color:#fff;}
		#cms_login {
			font-size:12pt;
			font-weight:bold;
		}
		.cms_searchBox {
			margin-right:20px;
			color:#999;
		}
		.cms_searchBox:focus {color:#000;}

.cms_nav {
	border-right:2px solid #777777;
	border-top:2px solid #000;
	background:#5E86AD;
	width:175px;
	position:fixed;
	top:30px;
	bottom:0;
	text-align:left;
	color:#fff;
	background-image: linear-gradient(to left,#A3BDD9,#6591BF 10%);
}
	.cms_navItemTitle {
		border-top:1px solid #999;
		border-bottom:1px solid #333;
		width:175px;
		background:#4D94DB;
		height:32px;
		background-image: linear-gradient(to left,#A3BDD9,#6591BF 10%);
		line-height:2;
	}
	.cms_navItemTitle:hover  {color:#ccc;}
		.cms_navItemTitleLink {
			color:#fff;
			text-decoration:none;
			display:block;
			width:100%;
		}
		.cms_navItemTitleLink:hover {color:#ccc;}
	.cms_navItemTitle:hover {
		width:175;
		background-image: linear-gradient(to left,#3E76AF,#2B537A 10%);
	}
	.cms_navItemList {
		color:#000;
		font-size:10pt;
	}
	.cms_navItem {
		padding-left:10px;
		background-image: linear-gradient(to left,#aaa,#eee 5%);
	}
	.cms_navItem:hover {background-image: linear-gradient(to left,#aaa,#ccc 5%);}
	.cms_navItemLink {
		display:block;
		width:100%;
		color:#000;
	}
	.cms_navItemLink:hover {color:#333;}
.cms_content {
	background:#fff;
	padding:5px;
	text-align:left;
	position:relative;
	left:177px;
	clear: both;
}

.cms_icon {
	height:32px;
	width:32px;
	background-image:url("../_img/icon_sheet.png")
}

.cms_loginManager {
	border:1px solid #ccc;
	background:#eee;
}

.cms_ferret {
	width:500px;
	margin-left:auto;
	margin-right:auto;	
	height:325px;
	text-align:left;
	font-family:"Courier New", Courier, monospace;
	line-height:3px;
	font-size:5pt;
}

#cms_dash {float:left;margin-right:5px;background-position: -224px -32px;}
#cms_webm {float:left;margin-right:5px;background-position: -32px -256px;}
#cms_page {float:left;margin-right:5px;background-position: -128px -64px;}
#cms_post {float:left;margin-right:5px;background-position: -32px -160px;}
#cms_template {float:left;margin-right:5px;background-position: -160px -64px;}
#cms_user {float:left;margin-right:5px;background-position: -32px -288px;}
#cms_plug {float:left;margin-right:5px;background-position: -128px -352px;}
	
/*END CMS Layout Styles*/

/*Styles for the login page*/
.cms_loginTable {
	width:220px;
	margin-left:auto;
	margin-right:auto;
	
}
table label {
	width:500px;
	color:#000;
	background-color:inherit;
}

/*END Styles for the login page*/


/*CMS Styles for various pages*/		
ul.cms_intro {
	margin-left:60px;
}

p.cms_intro {
	margin-left:30px;
}

h1.cms_pageTitle {
	font:28px Georgia, Serif;
	border-bottom:1px dotted #ccc;
	margin:0 0 10px;
}

input[readonly=readonly].cms_username {background:#dedede;}

#cms_homepageMarker {color:#0099CC;}

.clear {clear:both;}

input[type="text"], input[type="password"]
{
	border:1px solid #666;
	/*margin:0 0 15px;*/
	padding:3px;
}
textarea
{
	border:1px solid #666;
	width:350px;
	margin:0 0 15px;
	padding:3px;
	height:100px;
	font:12px "Lucida Grande", Sans-Serif;
}

input.cms_pageTextHeader{font:28px Georgia, Serif;}


label {
	background:#666;
	color:#FFF;
	padding:2px 6px;
}


.cms_pageEditLink {color:#000;}
.cms_pageEditLink:hover {color:#999;}

/*Board Styles*/
div.comment_Main {
	background:#eee;
	margin-top:10px;
	padding-top:5px;
	padding-left:5px;
	padding-bottom:5px;
	border:1px solid #999;
}

div.comment_Sub {
	margin-left:50px;
	background:#fff;
	margin-top:5px;
	padding-top:5px;
	padding-left:5px;
	padding-bottom:5px;
	border-top:1px solid #999;
	border-left:1px solid #999;
	border-bottom:1px solid #999;
}


/*Button styles*/
.actionLink {
	display:inline-block;
	text-align:center;
	padding:10px;
	width:200px;
	border:1px solid #000;
	background:#ccc;
	color:#fff;
	text-decoration:none;
	background-image: linear-gradient(to bottom,#4D94DB,#366899);
	text-shadow: 1px 1px 3px #000;
	border-radius:5px;
	margin-bottom:5px;
}
.actionLink:hover {background-image: linear-gradient(to bottom,#82B4E6,#4D94DB);}
.actionLink:active {background-image: linear-gradient(to bottom,#366899,#26496B);}

.updateBtn {
	display:inline-block;
	text-align:center;
	padding:5px 0px 5px 0px;
	width:200px;
	border:1px solid #000;
	background:#ccc;
	color:#fff;
	text-decoration:none;
	background-image: linear-gradient(to bottom,#00FF00,#009900);
	text-shadow: 1px 1px 3px #000;
	border-radius:5px;
	margin-bottom:5px;
}
.updateBtn:hover {background-image: linear-gradient(to bottom,#009900,#006B00);}
.updateBtn:active {background-image: linear-gradient(to bottom,#80FF80,#00FF00);}

.deleteBtn {
	color:#c00;
	padding:5px;
	border-bottom:#c00;
}
.deleteBtn:hover {
	background:#c00;
	color:#fff;
	text-shadow: 1px 1px 2px #000;
}
.deleteBtn:active {background:#900;}

/*END Button styles*/


.cms_warning {
	color:#ff0000;
	font-weight:bold;
}

/*content textbox for tinyMCE*/
#content {
	height:300px;
	width:100px;
}

